Switch from Playwright to Scrapy for Lambda layer
Replaced Playwright with Scrapy in the Lambda layer setup to align with updated requirements for web scraping. Updated dependencies, deployment scripts, and added improved upload handling for large layers using S3 as a fallback mechanism.

--- a/cloudformation/lambda.yaml
+++ b/cloudformation/lambda.yaml
@@ -6,9 +6,9 @@ Parameters:
     Type: String
     Description: ARN of the Lambda execution role
 
-  PlaywrightLayerArn:
+  ScrapyLayerArn:
     Type: String
-    Description: ARN of the Playwright Lambda layer
+    Description: ARN of the Scrapy Lambda layer
 
   SNSTopicArn:
     Type: String
@@ -44,7 +44,7 @@ Resources:
       Timeout: 300  # 5 minutes
       MemorySize: 2048
       Layers:
-        - !Ref PlaywrightLayerArn
+        - !Ref ScrapyLayerArn
       Environment:
         Variables:
           SNS_TOPIC_ARN: !Ref SNSTopicArn
@@ -69,7 +69,7 @@ Resources:
       Timeout: 300  # 5 minutes
       MemorySize: 2048
       Layers:
-        - !Ref PlaywrightLayerArn
+        - !Ref ScrapyLayerArn
       Environment:
         Variables:
           SNS_TOPIC_ARN: !Ref SNSTopicArn
